test_data/unit/stack/test_app_vpc/test_app_vpc_stack_custom/explore_new_setting/expected.json
{
  "Resources": {
    "NateNiteDevAppVpcAppVpc39E32984": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.37.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ]
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1Subnet1C115777": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-dev-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1RouteTable807F7293": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1RouteTableAssociationCC88B509": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1RouteTable807F7293"
        },
        "SubnetId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1Subnet1C115777"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1DefaultRoute939C2A58": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NateNiteDevAppVpcAppVpcIGW5E1BF9F5"
        },
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1RouteTable807F7293"
        }
      },
      "DependsOn": [
        "NateNiteDevAppVpcAppVpcVPCGW46B849A8"
      ]
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1EIP8BD7A805": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_publicSubnet1"
          }
        ]
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1NATGatewayF03368F3": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1EIP8BD7A805",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1Subnet1C115777"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_publicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1DefaultRoute939C2A58",
        "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1RouteTableAssociationCC88B509"
      ]
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2Subnet0097B231": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-dev-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2RouteTable217D4155": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2RouteTableAssociation2219DE93": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2RouteTable217D4155"
        },
        "SubnetId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2Subnet0097B231"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2DefaultRoute91B0A9F5": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NateNiteDevAppVpcAppVpcIGW5E1BF9F5"
        },
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2RouteTable217D4155"
        }
      },
      "DependsOn": [
        "NateNiteDevAppVpcAppVpcVPCGW46B849A8"
      ]
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2EIPC5D9F8CC": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_publicSubnet2"
          }
        ]
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2NATGateway7D16C587": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2EIPC5D9F8CC",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2Subnet0097B231"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_publicSubnet2"
          }
        ]
      },
      "DependsOn": [
        "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2DefaultRoute91B0A9F5",
        "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2RouteTableAssociation2219DE93"
      ]
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-dev-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1RouteTableF4932697": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1RouteTableAssociation2BB15A46": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1RouteTableF4932697"
        },
        "SubnetId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1DefaultRoute3D00F70E": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet1NATGatewayF03368F3"
        },
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1RouteTableF4932697"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-dev-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2RouteTable168A6837": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2RouteTableAssociation6DBFB25C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2RouteTable168A6837"
        },
        "SubnetId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2DefaultRoute37626863": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcpublicSubnet2NATGateway7D16C587"
        },
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2RouteTable168A6837"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet1SubnetE37B31B8": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.128.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-dev-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet1RouteTable3DE6B72A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet1RouteTableAssociationF714E470": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet1RouteTable3DE6B72A"
        },
        "SubnetId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet1SubnetE37B31B8"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet2SubnetC0B6354C": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.160.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-dev-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet2RouteTable112F0189": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/natenite-dev-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet2RouteTableAssociation9B921FBE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet2RouteTable112F0189"
        },
        "SubnetId": {
          "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcisolatedSubnet2SubnetC0B6354C"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcIGW5E1BF9F5": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ]
      }
    },
    "NateNiteDevAppVpcAppVpcVPCGW46B849A8": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "NateNiteDevAppVpcAppVpcIGW5E1BF9F5"
        },
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcEC2SecurityGroup35C3199B": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/EC2/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteDevAppVpcAppVpc39E32984",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteDevAppVpcAppVpc39E32984",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcEC2DDB60C7A": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteDevAppVpcAppVpcEC2SecurityGroup35C3199B",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E"
          },
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcEC2MESSAGESSecurityGroupD30B6E47": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/EC2_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteDevAppVpcAppVpc39E32984",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteDevAppVpcAppVpc39E32984",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcEC2MESSAGES5BEDE68E": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteDevAppVpcAppVpcEC2MESSAGESSecurityGroupD30B6E47",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2messages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E"
          },
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcSSMSecurityGroupB70D959D": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/SSM/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteDevAppVpcAppVpc39E32984",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteDevAppVpcAppVpc39E32984",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcSSM54DB1B75": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteDevAppVpcAppVpcSSMSecurityGroupB70D959D",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssm"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E"
          },
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcSSMMESSAGESSecurityGroup1AF2EDDD": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/SSM_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteDevAppVpcAppVpc39E32984",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteDevAppVpcAppVpc39E32984",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcSSMMESSAGES9DBD84D8": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteDevAppVpcAppVpcSSMMESSAGESSecurityGroup1AF2EDDD",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssmmessages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E"
          },
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcSECRETSMANAGERSecurityGroup40173E4C": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/SECRETS_MANAGER/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteDevAppVpcAppVpc39E32984",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteDevAppVpcAppVpc39E32984",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcSECRETSMANAGER90AE273C": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteDevAppVpcAppVpcSECRETSMANAGERSecurityGroup40173E4C",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".secretsmanager"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E"
          },
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcECSAGENTSecurityGroupDA82B48F": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/ECS_AGENT/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteDevAppVpcAppVpc39E32984",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteDevAppVpcAppVpc39E32984",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcECSAGENTFCB7B5A4": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteDevAppVpcAppVpcECSAGENTSecurityGroupDA82B48F",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-agent"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E"
          },
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcECSSecurityGroup0D19E6DB": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/ECS/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteDevAppVpcAppVpc39E32984",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteDevAppVpcAppVpc39E32984",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcECS4564BF89": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteDevAppVpcAppVpcECSSecurityGroup0D19E6DB",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E"
          },
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcECSTELEMETRYSecurityGroup4956BD33": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteDevAppVpcStack/NateNiteDevAppVpcAppVpc/ECS_TELEMETRY/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteDevAppVpcAppVpc39E32984",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteDevAppVpcAppVpc39E32984",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcAppVpcECSTELEMETRY3EAAE1E9": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteDevAppVpcAppVpcECSTELEMETRYSecurityGroup4956BD33",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-telemetry"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet1SubnetD21FE45E"
          },
          {
            "Ref": "NateNiteDevAppVpcAppVpcnatenitedevappvpcprivateSubnet2Subnet74DDB3F6"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteDevAppVpcAppVpc39E32984"
        }
      }
    },
    "NateNiteDevAppVpcPrivateR53Zone1BE3982A": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "dev.internal.dev.daisy.com.",
        "VPCs": [
          {
            "VPCId": {
              "Ref": "NateNiteDevAppVpcAppVpc39E32984"
            },
            "VPCRegion": {
              "Ref": "AWS::Region"
            }
          }
        ]
      }
    },
    "NateNiteDevAppVpcPublicR53ZoneC8817E0C": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "dev.daisy.com."
      }
    },
    "NateNiteDevAppVpcCertificate8854CF35": {
      "Type": "AWS::CertificateManager::Certificate",
      "Properties": {
        "DomainName": "dev.daisy.com",
        "DomainValidationOptions": [
          {
            "DomainName": "dev.daisy.com",
            "HostedZoneId": {
              "Ref": "NateNiteDevAppVpcPublicR53ZoneC8817E0C"
            }
          }
        ],
        "SubjectAlternativeNames": [
          "*.dev.daisy.com"
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteDevAppVpcStack/NateNiteDevAppVpcCertificate"
          }
        ],
        "ValidationMethod": "DNS"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
